[gd_scene load_steps=18 format=3 uid="uid://3tvr6ayegv2x"]

[ext_resource type="Script" path="res://ui_scripts/DragableCharacter.gd" id="1_exsob"]
[ext_resource type="Theme" uid="uid://b5uuv0ae6k3gt" path="res://default.tres" id="2_cdpth"]
[ext_resource type="Texture2D" uid="uid://dxqnna31eb3g8" path="res://ui_retro/Windows_Icons.png" id="3_ntfuj"]
[ext_resource type="Script" path="res://ui_scripts/RemoveSceneButton.gd" id="4_d7wum"]
[ext_resource type="FontFile" uid="uid://crxxdiidbhsib" path="res://monogram.ttf" id="5_cjyos"]
[ext_resource type="Texture2D" uid="uid://bgvaug42elsy4" path="res://icon.svg" id="6_6ri5e"]
[ext_resource type="Script" path="res://ui_scripts/CodeEdit.gd" id="7_oqwrj"]
[ext_resource type="AudioStream" uid="uid://ce0cwas8utfp6" path="res://ui_audio/type1.wav" id="8_r2e88"]
[ext_resource type="AudioStream" uid="uid://jmyg3h2r1y6m" path="res://ui_audio/type2.wav" id="9_j2r47"]
[ext_resource type="Texture2D" uid="uid://bqig8ce2q56te" path="res://ui_retro/Resizable_Corner.png" id="10_2qn5e"]
[ext_resource type="Script" path="res://ui_scenes/RunGame.gd" id="10_jquk4"]
[ext_resource type="Script" path="res://ui_scripts/ResizeCorner.gd" id="11_lkgb3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n7gyf"]
atlas = ExtResource("3_ntfuj")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8gex"]
atlas = ExtResource("3_ntfuj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_38c1w"]
random_volume_offset_db = 1.3
streams_count = 2
stream_0/stream = ExtResource("8_r2e88")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_j2r47")
stream_1/weight = 1.0

[sub_resource type="InputEventAction" id="InputEventAction_u48p0"]
action = &"code_step"

[sub_resource type="Shortcut" id="Shortcut_g6ykv"]
events = [SubResource("InputEventAction_u48p0")]

[node name="DraggableCodeEditor" type="Node2D"]
z_index = 2
script = ExtResource("1_exsob")
control_component_path = NodePath("ControlRoot")

[node name="ControlRoot" type="Control" parent="."]
custom_minimum_size = Vector2(270, 270)
layout_mode = 3
anchors_preset = 0
offset_right = 270.0
offset_bottom = 270.0

[node name="DraggablePanel" type="Panel" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cdpth")

[node name="MarginContainer" type="MarginContainer" parent="ControlRoot/DraggablePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cdpth")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ControlRoot/DraggablePanel/MarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="ToolBar" type="HBoxContainer" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 4

[node name="TitleEdit" type="LineEdit" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/ToolBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("2_cdpth")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 34
text = "Title"
max_length = 14
expand_to_text_length = true

[node name="HideButton" type="Button" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/ToolBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
icon = SubResource("AtlasTexture_n7gyf")

[node name="CloseButton" type="Button" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/ToolBar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
disabled = true
icon = SubResource("AtlasTexture_i8gex")
script = ExtResource("4_d7wum")

[node name="MainCodeEditor" type="CodeEdit" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_cdpth")
theme_override_colors/executing_line_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("5_cjyos")
theme_override_font_sizes/font_size = 32
theme_override_icons/bookmark = ExtResource("6_6ri5e")
text = "Lorem ipsum 
dolor sit amet,
consectetur 
adipiscing elit"
context_menu_enabled = false
minimap_width = 40
caret_draw_when_editable_disabled = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
script = ExtResource("7_oqwrj")
metadata/_edit_lock_ = true

[node name="typing" type="AudioStreamPlayer" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor"]
stream = SubResource("AudioStreamRandomizer_38c1w")
volume_db = -20.0
max_polyphony = 2

[node name="Footer" type="HBoxContainer" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="ButtonRun" type="Button" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("2_cdpth")
text = ">>"
script = ExtResource("10_jquk4")
metadata/_edit_lock_ = true

[node name="ButtonStep" type="Button" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("2_cdpth")
disabled = true
shortcut = SubResource("Shortcut_g6ykv")
text = ">"
metadata/_edit_lock_ = true

[node name="ButtonStop" type="Button" parent="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("2_cdpth")
disabled = true
text = "#"
icon_alignment = 1
expand_icon = true
metadata/_edit_lock_ = true

[node name="ResizeCorner" type="TextureRect" parent="ControlRoot/DraggablePanel"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 8
mouse_filter = 0
mouse_default_cursor_shape = 12
texture = ExtResource("10_2qn5e")
expand_mode = 1
script = ExtResource("11_lkgb3")
resized_component_path = NodePath("../..")

[connection signal="mouse_entered" from="ControlRoot/DraggablePanel" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="ControlRoot/DraggablePanel" to="." method="mouse_exited"]
[connection signal="caret_changed" from="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" to="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" method="_on_caret_changed"]
[connection signal="gui_input" from="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" to="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" method="_on_gui_input"]
[connection signal="text_changed" from="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" to="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" method="_on_text_changed"]
[connection signal="pressed" from="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer/ButtonRun" to="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer/ButtonRun" method="_on_pressed"]
[connection signal="pressed" from="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/Footer/ButtonStep" to="ControlRoot/DraggablePanel/MarginContainer/VBoxContainer/MainCodeEditor" method="_on_button_step_pressed"]
[connection signal="mouse_entered" from="ControlRoot/DraggablePanel/ResizeCorner" to="ControlRoot/DraggablePanel/ResizeCorner" method="mouse_entered"]
[connection signal="mouse_exited" from="ControlRoot/DraggablePanel/ResizeCorner" to="ControlRoot/DraggablePanel/ResizeCorner" method="mouse_exited"]
